--- a/style/style.css
+++ b/style/style.css
@@ -23,3 +23,34 @@ body {
  #vertodo{
        float: right;
   }
+
+  #social {
+    position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+    left: 0; /* Establecemos la barra en la izquierda */
+    top: 200px; /* Bajamos la barra 200px de arriba a abajo */
+    z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+  }
+  
+    #ul {
+      list-style: none;
+    }
+  
+    #a {
+      display: inline-block;
+      color:#fff;
+      background: #000;
+      padding: 10px 15px;
+      text-decoration: none;
+      -webkit-transition:all 500ms ease;
+      -o-transition:all 500ms ease;
+      transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+    }
+  
+    #social ul li .icon-facebook {background:#3b5998;} /* Establecemos los colores de cada red social, aprovechando su class */
+    #social ul li .icon-facebook2 {background: #0024f0;}
+    #social ul li .icon-whatsapp {background: #32d932;}
+  
+    #a:hover {
+      background: rgb(88, 179, 77); /* Cambiamos el fondo cuando el usuario pase el mouse */
+      padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+    }
