--- a/font.css
+++ b/font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2gh7hy');
-  src:  url('fonts/icomoon.eot?2gh7hy#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2gh7hy') format('truetype'),
-    url('fonts/icomoon.woff?2gh7hy') format('woff'),
-    url('fonts/icomoon.svg?2gh7hy#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ak843f');
+  src:  url('fonts/icomoon.eot?ak843f#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ak843f') format('truetype'),
+    url('fonts/icomoon.woff?ak843f') format('woff'),
+    url('fonts/icomoon.svg?ak843f#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-messenger:before {
+  content: "\eaeb";
+  color: #00b2ff;
+}
 .icon-home:before {
   content: "\e900";
 }
